--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -168,10 +168,19 @@
   }
 
   .rarity-section__scroll.section-scroll,
-  .users-section__content.section-scroll,
+  .users-section__content,
   .riagu-section__scroll.section-scroll {
-    padding-left: 16px;
-    padding-right: 12px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  @media (min-width: 901px) {
+    .rarity-section__scroll.section-scroll,
+    .users-section__content.section-scroll,
+    .riagu-section__scroll.section-scroll {
+      padding-left: 16px;
+      padding-right: 8px;
+    }
   }
 
   .items-section__scroll.section-scroll {
